Update *AllMoiResultsWriters to use new GeneScoreRanker