@@ -26,17 +26,14 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.text.DecimalFormat;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
-import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.StringJoiner;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.function.Consumer;
 
 import org.apache.commons.csv.CSVFormat;
 import org.apache.commons.csv.CSVPrinter;
@@ -49,8 +46,6 @@ import org.monarchinitiative.exomiser.core.analysis.util.acmg.AcmgClassification
 import org.monarchinitiative.exomiser.core.analysis.util.acmg.AcmgCriterion;
 import org.monarchinitiative.exomiser.core.analysis.util.acmg.AcmgEvidence;
 import org.monarchinitiative.exomiser.core.filters.FilterType;
-import org.monarchinitiative.exomiser.core.model.FilterStatus;
-import org.monarchinitiative.exomiser.core.model.Gene;
 import org.monarchinitiative.exomiser.core.model.GeneIdentifier;
 import org.monarchinitiative.exomiser.core.model.GeneScore;
 import org.monarchinitiative.exomiser.core.model.TranscriptAnnotation;
@@ -63,15 +58,17 @@ import org.monarchinitiative.exomiser.core.model.pathogenicity.PathogenicityScor
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import static java.util.stream.Collectors.*;
+
 public class TsvVariantAllMoiResultsWriter implements ResultsWriter {
     private static final Logger logger = LoggerFactory.getLogger(TsvVariantAllMoiResultsWriter.class);
     private static final OutputFormat OUTPUT_FORMAT = OutputFormat.TSV_VARIANT;
-    private final CSVFormat format = CSVFormat.newFormat('\t')
+    private final CSVFormat csvFormat = CSVFormat.newFormat('\t')
             .withQuote(null)
             .withRecordSeparator("\n")
             .withIgnoreSurroundingSpaces(true)
             .withHeader("#RANK", "ID", "GENE_SYMBOL", "ENTREZ_GENE_ID", "MOI", "P-VALUE", "EXOMISER_GENE_COMBINED_SCORE", "EXOMISER_GENE_PHENO_SCORE", "EXOMISER_GENE_VARIANT_SCORE", "EXOMISER_VARIANT_SCORE", "CONTRIBUTING_VARIANT", "WHITELIST_VARIANT", "VCF_ID", "RS_ID", "CONTIG", "START", "END", "REF", "ALT", "CHANGE_LENGTH", "QUAL", "FILTER", "GENOTYPE", "FUNCTIONAL_CLASS", "HGVS", "EXOMISER_ACMG_CLASSIFICATION", "EXOMISER_ACMG_EVIDENCE", "EXOMISER_ACMG_DISEASE_ID", "EXOMISER_ACMG_DISEASE_NAME", "CLINVAR_ALLELE_ID", "CLINVAR_PRIMARY_INTERPRETATION", "CLINVAR_STAR_RATING", "GENE_CONSTRAINT_LOEUF", "GENE_CONSTRAINT_LOEUF_LOWER", "GENE_CONSTRAINT_LOEUF_UPPER", "MAX_FREQ_SOURCE", "MAX_FREQ", "ALL_FREQ", "MAX_PATH_SOURCE", "MAX_PATH", "ALL_PATH");
-    private final DecimalFormat formatter = new DecimalFormat(".####");
+    private final DecimalFormat decimalFormat = new DecimalFormat("0.0000");
 
     public TsvVariantAllMoiResultsWriter() {
         Locale.setDefault(Locale.UK);
@@ -79,89 +76,50 @@ public class TsvVariantAllMoiResultsWriter implements ResultsWriter {
 
     public void writeFile(ModeOfInheritance modeOfInheritance, AnalysisResults analysisResults, OutputSettings outputSettings) {
         Sample sample = analysisResults.getSample();
-        String outFileName = ResultsWriterUtils.makeOutputFilename(sample.getVcfPath(), outputSettings.getOutputPrefix(), OUTPUT_FORMAT, modeOfInheritance);
-        Path outFile = Paths.get(outFileName);
+        String outFileName = ResultsWriterUtils.makeOutputFilename(sample.getVcfPath(), outputSettings.getOutputPrefix(), OUTPUT_FORMAT, ModeOfInheritance.ANY);
+        Path outFile = Path.of(outFileName);
 
-        try (CSVPrinter printer = new CSVPrinter(Files.newBufferedWriter(outFile, StandardCharsets.UTF_8), this.format)) {
+        try (CSVPrinter printer = new CSVPrinter(Files.newBufferedWriter(outFile, StandardCharsets.UTF_8), this.csvFormat)) {
             this.writeData(analysisResults, outputSettings, printer);
-        } catch (IOException var12) {
+        } catch (Exception var12) {
             logger.error("Unable to write results to file {}", outFileName, var12);
         }
 
-        logger.debug("{} {} results written to file {}", OUTPUT_FORMAT, modeOfInheritance.getAbbreviation(), outFileName);
+        logger.debug("{} {} results written to file {}", OUTPUT_FORMAT, ModeOfInheritance.ANY.getAbbreviation(), outFileName);
     }
 
     public String writeString(ModeOfInheritance modeOfInheritance, AnalysisResults analysisResults, OutputSettings outputSettings) {
         StringBuilder output = new StringBuilder();
 
-        try (CSVPrinter printer = new CSVPrinter(output, this.format)) {
+        try (CSVPrinter printer = new CSVPrinter(output, this.csvFormat)) {
             this.writeData(analysisResults, outputSettings, printer);
-        } catch (IOException var10) {
+        } catch (Exception var10) {
             logger.error("Unable to write results to string {}", output, var10);
         }
 
         return output.toString();
     }
 
-    private void writeData(AnalysisResults analysisResults, OutputSettings outputSettings, CSVPrinter printer) throws IOException {
-        List<Gene> filteredGenesForOutput = outputSettings.filterGenesForOutput(analysisResults.getGenes());
-        Map<GeneIdentifier, Gene> genesById = filteredGenesForOutput.stream().collect(Collectors.toMap(Gene::getGeneIdentifier, Function.identity()));
-        List<GeneScore> rankedGeneScores = this.calculateRankedGeneScores(outputSettings, filteredGenesForOutput);
-        boolean contributingVariantsOnly = outputSettings.outputContributingVariantsOnly();
-        int rank = 0;
-        for (GeneScore geneScore : rankedGeneScores) {
-            ++rank;
-            ModeOfInheritance modeOfInheritance = geneScore.getModeOfInheritance();
-            logger.debug("{} {} {} {} {} {}", rank, geneScore.getGeneIdentifier().getGeneSymbol(), modeOfInheritance.getAbbreviation(), geneScore.getCombinedScore(), geneScore.getPhenotypeScore(), geneScore.getVariantScore());
-            // a GeneScore only contains the contributing variants so can't be used directly to get the variants involved, hence the requirement for the Gene.
-            List<VariantEvaluation> rankedVariants = genesById.get(geneScore.getGeneIdentifier())
-                    .getVariantEvaluations().stream()
-                    .filter(variantEvaluation -> !contributingVariantsOnly || variantEvaluation.contributesToGeneScoreUnderMode(modeOfInheritance))
-                    .filter(variantEvaluation -> variantEvaluation.isCompatibleWith(modeOfInheritance))
-                    .filter(variantEvaluation -> (geneScore.getCombinedScore() == 0) != variantEvaluation.passedFilters())
-                    .sorted(VariantEvaluation::compareByRank)
-                    .collect(Collectors.toList());
-
-            for (VariantEvaluation ve : rankedVariants) {
-                List<Object> fields = this.buildVariantRecord(rank, ve, geneScore);
-                printer.printRecord(fields);
-            }
-        }
-
+    private void writeData(AnalysisResults analysisResults, OutputSettings outputSettings, CSVPrinter printer) {
+        GeneScoreRanker geneScoreRanker = new GeneScoreRanker(analysisResults, outputSettings);
+        geneScoreRanker.rankedVariants()
+                .map(rankedVariant -> buildVariantRecord(rankedVariant.rank(), rankedVariant.variantEvaluation(), rankedVariant.geneScore()))
+                .forEach(printRecord(printer));
     }
 
-    private List<GeneScore> calculateRankedGeneScores(OutputSettings outputSettings, List<Gene> filteredGenesForOutput) {
-        Map<Boolean, List<GeneScore>> rankedAndUnrankedGeneScores = filteredGenesForOutput.stream()
-                .flatMap(gene -> {
-                    List<GeneScore> compatibleGeneScores = new ArrayList<>(gene.getCompatibleGeneScores());
-                    if (gene.getVariantEvaluations().stream().anyMatch(ve -> ve.getFilterStatus() == FilterStatus.FAILED)) {
-                        // create a failed gene score placeholder for when run in FULL mode
-                        GeneScore geneScore = GeneScore.builder()
-                                .geneIdentifier(gene.getGeneIdentifier())
-                                .modeOfInheritance(ModeOfInheritance.ANY)
-                                .combinedScore(0)
-                                .phenotypeScore(gene.getPriorityScore())
-                                .variantScore(0)
-                                .build();
-                        compatibleGeneScores.add(geneScore);
-                    }
-                    return compatibleGeneScores.stream();
-                })
-                .sorted()
-                .collect(Collectors.partitioningBy(o -> o.getCombinedScore() != 0));
-        if (outputSettings.outputContributingVariantsOnly()) {
-            logger.debug("Writing out only CONTRIBUTING variants");
-            return rankedAndUnrankedGeneScores.get(true);
-        } else {
-            List<GeneScore> rankedGeneScores = new ArrayList<>(rankedAndUnrankedGeneScores.get(true).size() + rankedAndUnrankedGeneScores.get(false).size());
-            rankedGeneScores.addAll(rankedAndUnrankedGeneScores.get(true));
-            rankedGeneScores.addAll(rankedAndUnrankedGeneScores.get(false));
-            return List.copyOf(rankedGeneScores);
-        }
+    Consumer<Iterable<Object>> printRecord(CSVPrinter printer) {
+        return list -> {
+            try {
+                printer.printRecord(list);
+            } catch (IOException e) {
+                // cross fingers and swallow?
+                throw new IllegalStateException(e);
+            }
+        };
     }
 
     private List<Object> buildVariantRecord(int rank, VariantEvaluation ve, GeneScore geneScore) {
-        List<Object> fields = new ArrayList<>();
+        List<Object> fields = new ArrayList<>(csvFormat.getHeader().length);
         GeneIdentifier geneIdentifier = geneScore.getGeneIdentifier();
         ModeOfInheritance modeOfInheritance = geneScore.getModeOfInheritance();
         String moiAbbreviation = modeOfInheritance.getAbbreviation() == null ? "ANY" : modeOfInheritance.getAbbreviation();
@@ -173,11 +131,11 @@ public class TsvVariantAllMoiResultsWriter implements ResultsWriter {
         fields.add(geneIdentifier.getGeneSymbol());
         fields.add(geneIdentifier.getEntrezId());
         fields.add(moiAbbreviation);
-        fields.add(geneScore.pValue());
-        fields.add(geneScore.getCombinedScore());
-        fields.add(geneScore.getPhenotypeScore());
-        fields.add(geneScore.getVariantScore());
-        fields.add((double) ve.getVariantScore());
+        fields.add(decimalFormat.format(geneScore.pValue()));
+        fields.add(decimalFormat.format(geneScore.getCombinedScore()));
+        fields.add(decimalFormat.format(geneScore.getPhenotypeScore()));
+        fields.add(decimalFormat.format(geneScore.getVariantScore()));
+        fields.add(decimalFormat.format(ve.getVariantScore()));
         fields.add(ve.contributesToGeneScoreUnderMode(modeOfInheritance) ? "1" : "0");
         fields.add(ve.isWhiteListed() ? "1" : "0");
         fields.add(ve.id());
@@ -189,7 +147,7 @@ public class TsvVariantAllMoiResultsWriter implements ResultsWriter {
         fields.add(ve.ref());
         fields.add(ve.alt());
         fields.add(ve.changeLength());
-        fields.add(this.formatter.format(ve.getPhredScore()));
+        fields.add(this.decimalFormat.format(ve.getPhredScore()));
         fields.add(this.makeFiltersField(modeOfInheritance, ve));
         fields.add(ve.getGenotypeString());
         fields.add(ve.getVariantEffect().getSequenceOntologyTerm());
@@ -225,18 +183,18 @@ public class TsvVariantAllMoiResultsWriter implements ResultsWriter {
                     AcmgCriterion.Evidence evidence = entry.getValue();
                     return (acmgCriterion.evidence() == evidence) ? acmgCriterion.toString() : acmgCriterion + "_" + evidence.displayString();
                 })
-                .collect(Collectors.joining(","));
+                .collect(joining(","));
     }
     private String toVcfFreqInfo(List<Frequency> frequencies) {
         return frequencies.stream()
                 .map(frequency -> frequency.getSource() + "=" + frequency.getFrequency())
-                .collect(Collectors.joining(","));
+                .collect(joining(","));
     }
 
     private String toVcfPathInfo(List<PathogenicityScore> predictedPathogenicityScores) {
         return predictedPathogenicityScores.stream()
                 .map(pathScore -> pathScore.getSource() + "=" + pathScore.getScore())
-                .collect(Collectors.joining(","));
+                .collect(joining(","));
     }
 
     private String makeFiltersField(ModeOfInheritance modeOfInheritance, VariantEvaluation variantEvaluation) {
